# tabstash

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
content/tabs/cheap-trick/: i-want-you-to-want-me.md
content/tabs/joe-strummer-and-the-mescaleros/: silver-and-gold.md
content/tabs/oasis/: wonderwall.md
content/tabs/pink-floyd/: wish-you-were-here.md
content/tabs/the-muffs/: sad-tomorrow.md
src/tabstash/: __init__.py  builder.py  cli.py  models.py  parser.py  search.py
static/css/: style.css
static/js/: auto-scroll.js  metronome.js  search.js
templates/: artist.html  base.html  index.html  tab.html
tests/: conftest.py  test_browser.py  test_metronome.py  test_models.py  test_parser.py
tests/fixtures/tabs/: valid_tab.md
